# slide_merger

./: .gitignore  Licence.md  README.md
.github/workflows/: backend-ci.yml  cli-ci.yml
backend/: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
backend/src/: __init__.py  slide_merger.py
backend/tests/: conftest.py  test_placeholder.py
cli/: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
cli/src/: fuzzy_completer.py  main.py
cli/tests/: test_fuzzy_completer.py
